# SAP

./: .gitignore  CMakeLists.txt  README.md  emscripten_build.bat  emscripten_build.sh  main.cpp
include/: SAP.h
include/SAP/: PairManager.h  PairManager.inl  SAP.inl  SAPManager.h  SAPManager.inl  SAPManagerC.h  SAPManagerC.inl  SAPRaycaster.h  SAPRaycaster.inl  SAPSegment.h  SAPSegment.inl  SAP_config.h  SAP_domain.h  SAP_internal.h  SAP_internal.inl
src/: main.cpp  test_cfg.h  update_loop.cpp  update_loop.h
test/: SAP_test.h  main.cpp  test_cfg.h  update_loop.h  update_loop.inl
